--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "NODE_ENV=production node app.js",
-    "dev": "NODE_ENV=development nodemon app.js",
+    "dev": "nodemon app.js",
     "data:import": "node src/config/seeder",
     "data:destroy": "node src/config/seeder -d"
   },
@@ -17,7 +17,6 @@
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "date-fns": "^2.29.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-rate-limit": "^6.0.5",
